	completing the requirement.
	* Fixed random item rewards for quests.
	* Fixed job check for quest item rewards.

2012-10-21  GoldenKevin  (revision 149)

	* All beginner skills (except Monster Rider and Follow the Lead) are
	functional, although Recovery does not display the HP recovered in big blue
	numbers above the player's head.
	* Got rid of custom time zone in TimeTool only. The value specified in the
	properties files now apply for the entire Java process, so the logger dates
	and times, the Rhino/JavaScript Date objects, MySQL Connector/J setDate
	functions, and everything that used TimeTool before use a consistent
	time zone. Note that any messages logged before the properties files are
	successfully read will use the server's time zone.
	* CenterServer allows custom time zone for message logging and MySQL
	Connector/J purposes.

2012-10-23  GoldenKevin  (revision 150)

	* Arrow drops now drop a quantity in the range of 10-25 instead of just 1.
	* Players in map are shown the raw damage a player has taken (i.e. before
	Magic Guard subtracts HP damage).
	* Skills Disorder and Threaten now inflict both their mob effects on mobs.

2012-10-25  GoldenKevin  (revision 151)

	* Corrected behavior of stacking items. Obtained items will always fill up
	any unfilled slots of the same item before they start taking up empty slots.
	* Fixed buying equips or enough items to fill up an entire slot (100 potions
	for example).
	* Fixed mob counting quests not incrementing properly if mobs are not killed
	in one hit.
	* Fixed quest completed notices repeatedly popping up for a quest even if
	its requirements were already fulfilled before they were checked again.
	* Maple TV NPCs no longer show the placeholder script for shop NPCs.
	* Fixed NullPointerException for mob skills.

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.